--- a/juejin/WebRTC/web/package.json
+++ b/juejin/WebRTC/web/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.3.14",
     "less": "^4.2.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
